--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Yukki </title>
+<title>Yukki</title>
 <style>
   body {
     margin: 0; padding: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -165,7 +165,7 @@
 
 <div id="container">
   <h1 id="title">Yukki</h1>
-  <div id="greeting">Привет! Я Юкки — самая милая чихуахуа! 💖</div>
+  <div id="greeting">Привет! Я Юкки! 💖</div>
   <img id="yukkiAvatar" src="cute.jfif" alt="Фото Юкки" title="Кликни для 'гав-гав!'" />
 
   <div class="photos">
