--- a/index.html
+++ b/index.html
@@ -934,9 +934,8 @@
     if (leaderboard.length > 5) leaderboard.length = 5;
     updateLeaderboard();
   };
+  updateLeaderboard();
 })();
 </script>
-
-
 </body>
 </html>
